# alfred-converter

./: .coveragerc  .gitignore  Makefile  README.rst  Unit converter.alfredworkflow  info.plist  poscUnits22.xml  pyproject.toml  pytest.ini  setup.cfg  tox.ini  unit_converter.alfredworkflow
.github/workflows/: ci.yml  codeql.yml
converter/: constants.py  convert.py  currency.py  extra_units.py  main.py  output.py  safe_math.py  utils.py
docs/superpowers/specs/: 2026-04-26-alfred-converter-modernization-design.md
tests/: conftest.py  test_calculations.py  test_commandline.py  test_constants.py  test_currency.py  test_docs.py  test_main_routing.py  test_output.py  test_package.py  test_workflow_metadata.py  test_working.py
